# pdfsolid-conversion-mac-c

./: README.md
doc/: developer_guide_c.md
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_605b5c4f6c22687a3d2ba1ccb31f5030.html  dir_605b5c4f6c22687a3d2ba1ccb31f5030.js  dir_e1ce490d525134ea87299589215a8a28.html  dir_e1ce490d525134ea87299589215a8a28.js  dir_e96bb96152b64bd831bbb4683d882cfb.html  dir_e96bb96152b64bd831bbb4683d882cfb.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  mainpage_8md.html  md_build_api_reference_public_c_mainpage.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  pdfsolid__basictypes__c_8h.html  pdfsolid__basictypes__c_8h.js  pdfsolid__basictypes__c_8h_source.html  pdfsolid__common__c_8h.html  pdfsolid__common__c_8h.js  pdfsolid__common__c_8h_source.html  pdfsolid__config__macros_8h.html  pdfsolid__config__macros_8h.js  pdfsolid__config__macros_8h_source.html  pdfsolid__conversion__c_8h.html  pdfsolid__conversion__c_8h.js  pdfsolid__conversion__c_8h_source.html  struct___c_convert_option-members.html  struct___c_convert_option.html  (+3 more)
doc/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_9.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  (+11 more)
include/: pdfsolid_basictypes_c.h  pdfsolid_common_c.h  pdfsolid_conversion_c.h
samples/demo/: CMakeLists.txt  RunDemo.sh  demo.c
